<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/formPadding"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/H3" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/formPadding"
            android:text="@string/title_kiwi_recorder"
            android:textColor="@color/defaultTextColor"
            android:textSize="@dimen/H2" />

        <TextView
            android:id="@+id/positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/formPadding"
            android:text="@string/confirm"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/H3" />
    </LinearLayout>

    <View style="@style/DividerStyle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_line"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/formMargin"
                android:paddingRight="@dimen/formMargin">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/iconPadding"
                    android:gravity="center_vertical"
                    android:text="@string/label_veid"
                    android:textColor="@color/defaultTextColor"
                    android:textSize="@dimen/H3" />

                <EditText
                    android:id="@+id/et_veid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/label_veid_hint"
                    android:padding="@dimen/textMargin"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/H3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_line"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/formMargin"
                android:paddingRight="@dimen/formMargin">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/iconPadding"
                    android:gravity="center_vertical"
                    android:text="@string/label_api_key"
                    android:textColor="@color/defaultTextColor"
                    android:textSize="@dimen/H3" />

                <EditText
                    android:id="@+id/et_apikey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:maxLines="1"
                    android:inputType="text"
                    android:scrollHorizontally="true"
                    android:hint="@string/label_api_key_hint"
                    android:padding="@dimen/textMargin"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/H3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_bottom_line"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/formMargin"
                android:paddingRight="@dimen/formMargin">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/iconPadding"
                    android:gravity="center_vertical"
                    android:text="@string/label_mark"
                    android:textColor="@color/defaultTextColor"
                    android:textSize="@dimen/H3" />

                <EditText
                    android:id="@+id/et_mark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/label_mark_hint"
                    android:maxLength="30"
                    android:inputType="text"
                    android:padding="@dimen/textMargin"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/H3" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>