<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.freddon.android.app.kiwivmware.ui.fragment.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <com.freddon.android.app.extension.viewlibs.widget.container.LayersLayout
        android:id="@+id/layers"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/ns_main_kiwi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/letterGap"
                android:gravity="center"
                android:text=""
                android:textColor="@color/defaultTextColor"
                android:textStyle="bold"
                tools:text="标题" />


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">


                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_physical_location"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <TextView
                        android:id="@+id/tv_kiwi_physical_location"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="US, California    Node ID: v804    VPS ID: 417517" />
                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_ip_addr"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <TextView
                        android:id="@+id/tv_kiwi_ip_addr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="18.8.8.8" />
                </TableRow>


                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_ssh_port"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <TextView
                        android:id="@+id/tv_kiwi_ssh_port"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="12227" />
                </TableRow>


                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_status"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <TextView
                        android:id="@+id/tv_kiwi_status"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Running (34 processes; LA: 0.00/0.00/0.00)" />
                </TableRow>


                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_actions"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_kiwi_ssh_start"
                            android:layout_width="64dp"
                            android:layout_height="24dp"
                            android:layout_marginRight="@dimen/iconPadding"
                            android:background="@color/colorAccent"
                            android:text="@string/kiwi_action_start"
                            android:textAllCaps="false"
                            android:textColor="@color/whiteTextColor"
                            android:textSize="@dimen/H5" />

                        <Button
                            android:id="@+id/btn_kiwi_ssh_stop"
                            android:layout_width="64dp"
                            android:layout_height="24dp"
                            android:layout_marginRight="@dimen/iconPadding"
                            android:background="@color/colorPrimary"
                            android:text="@string/kiwi_action_stop"
                            android:textAllCaps="false"
                            android:textColor="@color/whiteTextColor"
                            android:textSize="@dimen/H5" />


                        <Button
                            android:id="@+id/btn_kiwi_ssh_reboot"
                            android:layout_width="64dp"
                            android:layout_height="24dp"
                            android:background="@color/colorAccentAlpha"
                            android:text="@string/kiwi_action_reboot"
                            android:textAllCaps="false"
                            android:textColor="@color/whiteTextColor"
                            android:textSize="@dimen/H5" />

                    </LinearLayout>
                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_ram"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <ProgressBar
                            android:id="@+id/progress_kiwi_ram"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:progress="50" />

                        <TextView
                            android:id="@+id/tv_kiwi_ram"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/formPadding"
                            android:textColor="@color/defaultHintTextColor"
                            android:textSize="@dimen/H5"
                            tools:text="139.9/256MB" />

                    </LinearLayout>
                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_swap"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <ProgressBar
                            android:id="@+id/progress_kiwi_swap"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:progress="20" />

                        <TextView
                            android:id="@+id/tv_kiwi_swap"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/formPadding"
                            android:textColor="@color/defaultHintTextColor"
                            android:textSize="@dimen/H5"
                            tools:text="139.9/256MB" />

                    </LinearLayout>
                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_disk_usage"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <ProgressBar
                            android:id="@+id/progress_kiwi_disk_usage"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:progress="5" />

                        <TextView
                            android:id="@+id/tv_kiwi_disk_usage"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/formPadding"
                            android:textColor="@color/defaultHintTextColor"
                            android:textSize="@dimen/H5"
                            tools:text="1.9/12GB" />

                    </LinearLayout>
                </TableRow>


                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_bandwidth_usage"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <ProgressBar
                            android:id="@+id/progress_kiwi_bandwidth_usage"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:progress="5" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_kiwi_bandwidth_usage"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/formPadding"
                                android:textColor="@color/defaultHintTextColor"
                                android:textSize="@dimen/H5"
                                tools:text="139.9/256GB" />

                            <TextView
                                android:id="@+id/tv_kiwi_bandwidth_resets"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="@dimen/formPadding"
                                android:text="@string/kiwi_bandwidth_usage_resets"
                                android:textColor="@color/defaultHintTextColor"
                                android:textSize="@dimen/H5" />
                        </LinearLayout>


                    </LinearLayout>
                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_os"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <TextView
                        android:id="@+id/tv_kiwi_os"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Centos 6 x86_64" />
                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/letterGap">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/formPadding"
                        android:text="@string/kiwi_hostname"
                        android:textColor="@color/defaultTextColor"
                        android:textSize="@dimen/H3" />

                    <TextView
                        android:id="@+id/tv_kiwi_hostname"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="localhost.main" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/kiwi_ptr_records"
                android:textColor="@color/defaultTextColor"
                android:textSize="@dimen/H3"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/table_ptr_records"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

            </TableLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</FrameLayout>
